fix: doesnt flex-wrap

--- a/src/pages/home/components/ControlAutoComplete/ControlAutoComplete.module.scss
+++ b/src/pages/home/components/ControlAutoComplete/ControlAutoComplete.module.scss
@@ -1,3 +1,3 @@
 .wrap {
-  @apply relative w-full;
+  @apply relative;
 }
