--- a/src/pages/home/components/ControlAutoCompleteList/ControlAutoCompleteList.module.scss
+++ b/src/pages/home/components/ControlAutoCompleteList/ControlAutoCompleteList.module.scss
@@ -1,3 +1,3 @@
 .wrap {
-  @apply mt-10 flex flex-wrap gap-3;
+  @apply mt-10 flex justify-center px-1 flex-wrap gap-3;
 }
