--- a/src/pages/home/components/Controls/Controls.module.scss
+++ b/src/pages/home/components/Controls/Controls.module.scss
@@ -1,3 +1,3 @@
 .wrap {
-  @apply flex flex-col gap-5;
+  @apply flex flex-col items-center px-1 gap-5;
 }
